<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".StockTakeError">

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline32"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.17" />

    <ImageView
        android:id="@+id/imageView4"
        android:layout_width="161dp"
        android:layout_height="196dp"
        android:scaleType="fitCenter"
        app:layout_constraintBottom_toBottomOf="@+id/guideline32"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/catstocknotfound2" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline33"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.27" />

    <TextView
        android:id="@+id/textView19"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/stocktakeerror_fail_item_not"
        android:textColor="@color/red"
        android:textSize="28dp"
        app:layout_constraintStart_toStartOf="@+id/guideline35"
        app:layout_constraintTop_toTopOf="@+id/guideline32" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline35"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.05" />

    <TextView
        android:id="@+id/textView20"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:enabled="false"
        android:text="Asset ID: "
        android:textColor="@color/red"
        android:textSize="20dp"
        app:layout_constraintStart_toStartOf="@+id/guideline35"
        app:layout_constraintTop_toTopOf="@+id/guideline33" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline36"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.35" />

    <TextView
        android:id="@+id/lblStockErrorNo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:enabled="false"
        android:maxWidth="200dp"
        android:maxLines="4"
        android:text="Serial No "
        android:textColor="@color/red"
        android:textSize="20dp"
        app:layout_constraintStart_toStartOf="@+id/guideline36"
        app:layout_constraintTop_toTopOf="@+id/guideline33" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline37"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.32" />

    <TextView
        android:id="@+id/textView21"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:enabled="false"
        android:text="*Location: "
        android:textColor="@color/red"
        android:textSize="20dp"
        app:layout_constraintStart_toStartOf="@+id/guideline35"
        app:layout_constraintTop_toTopOf="@+id/guideline37" />

    <EditText
        android:id="@+id/editFailLocation"
        android:layout_width="340dp"
        android:layout_height="40dp"
        android:background="@drawable/edit_text_background"
        android:hint=""
        android:maxLength="255"
        android:maxLines="4"
        app:layout_constraintStart_toStartOf="@+id/guideline35"
        app:layout_constraintTop_toBottomOf="@+id/textView21" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline44"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.42" />

    <TextView
        android:id="@+id/displayLocationRequired"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:enabled="false"
        android:text="@string/stocktakeerror_location_required"
        android:textColor="@color/red"
        android:textSize="20dp"
        app:layout_constraintStart_toStartOf="@+id/guideline35"
        app:layout_constraintTop_toTopOf="@+id/guideline44" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline38"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.47" />

    <TextView
        android:id="@+id/textView22"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:enabled="false"
        android:text="*Description: "
        android:textColor="@color/red"
        android:textSize="20dp"
        app:layout_constraintStart_toStartOf="@+id/guideline35"
        app:layout_constraintTop_toTopOf="@+id/guideline38" />

    <EditText
        android:id="@+id/editFailDescription"
        android:layout_width="340dp"
        android:layout_height="40dp"
        android:background="@drawable/edit_text_background"
        android:hint=""
        android:maxLength="255"
        android:maxLines="4"
        app:layout_constraintStart_toStartOf="@+id/guideline35"
        app:layout_constraintTop_toBottomOf="@+id/textView22" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline45"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.57" />

    <TextView
        android:id="@+id/displayDescriptionRequired"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:enabled="false"
        android:text="@string/stocktakeerror_description_required"
        android:textColor="@color/red"
        android:textSize="20dp"
        app:layout_constraintStart_toStartOf="@+id/guideline35"
        app:layout_constraintTop_toTopOf="@+id/guideline45" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline39"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.62" />

    <TextView
        android:id="@+id/textView23"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:enabled="false"
        android:text="*Remarks: "
        android:textColor="@color/red"
        android:textSize="20dp"
        app:layout_constraintStart_toStartOf="@+id/guideline35"
        app:layout_constraintTop_toTopOf="@+id/guideline39" />

    <EditText
        android:id="@+id/editFailRemark"
        android:layout_width="340dp"
        android:layout_height="40dp"
        android:background="@drawable/edit_text_background"
        android:hint=""
        android:maxLength="255"
        android:maxLines="4"
        app:layout_constraintStart_toStartOf="@+id/guideline35"
        app:layout_constraintTop_toBottomOf="@+id/textView23" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline46"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.72"/>

    <TextView
        android:id="@+id/displayRemarkRequired"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:enabled="false"
        android:text="@string/stocktakeerror_remark_required"
        android:textColor="@color/red"
        android:textSize="20dp"
        app:layout_constraintStart_toStartOf="@+id/guideline35"
        app:layout_constraintTop_toTopOf="@+id/guideline46" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline40"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.76"/>

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline41"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.56"/>

    <Button
        android:id="@+id/btnFailUpdate"
        android:layout_width="135dp"
        android:layout_height="wrap_content"
        android:text="Update"
        android:textSize="20dp"
        app:layout_constraintStart_toStartOf="@+id/guideline41"
        app:layout_constraintTop_toTopOf="@+id/guideline40" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline42"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.83"/>

    <Button
        android:id="@+id/btnStockErrorURLUntracked"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="?android:attr/selectableItemBackground"
        android:text="@string/urlStockTakeUntracked"
        android:textColor="#000000"
        android:textColorLink="#000000"
        android:textSize="18dp"
        app:layout_constraintTop_toTopOf="@+id/guideline42"></Button>

    <Button
        android:id="@+id/btnStockErrorURLMaster"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="?android:attr/selectableItemBackground"
        android:text="@string/urlStockTakeMaster"
        android:textColor="#000000"
        android:textColorLink="#000000"
        android:textSize="18dp"
        app:layout_constraintTop_toBottomOf="@+id/btnStockErrorURLUntracked"></Button>

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline43"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.2"/>


</androidx.constraintlayout.widget.ConstraintLayout>