<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".StockTakeErrorUpdate">

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline51"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.30" />

    <ImageView
        android:id="@+id/imageView14"
        android:layout_width="279dp"
        android:layout_height="286dp"
        android:scaleType="fitCenter"
        app:layout_constraintBottom_toBottomOf="@+id/guideline51"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.537"
        app:srcCompat="@drawable/catstocknotfound2" />

    <TextView
        android:id="@+id/textView39"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/stocktakeerror_fail_item_not"
        android:textColor="@color/red"
        android:textSize="25dp"
        app:layout_constraintStart_toStartOf="@+id/guideline81"
        app:layout_constraintTop_toTopOf="@+id/guideline51" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline81"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.05" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline82"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.40" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline83"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.32" />

    <TextView
        android:id="@+id/textView41"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:enabled="false"
        android:text="Asset ID: "
        android:textColor="@color/red"
        android:textSize="20dp"
        app:layout_constraintStart_toStartOf="@+id/guideline81"
        app:layout_constraintTop_toTopOf="@+id/guideline82" />

    <TextView
        android:id="@+id/txtAssetFailUpdate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:enabled="false"
        android:maxWidth="200dp"
        android:maxLines="4"
        android:text="Asset ID Input"
        android:textColor="@color/red"
        android:textSize="20dp"
        app:layout_constraintStart_toStartOf="@+id/guideline83"
        app:layout_constraintTop_toTopOf="@+id/guideline82" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline84"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.49" />

    <TextView
        android:id="@+id/textView45"
        android:layout_width="380dp"
        android:layout_height="wrap_content"
        android:enabled="false"
        android:text="Refer to Untracked Assets List for more information"
        android:textColor="@color/red"
        android:textSize="25dp"
        app:layout_constraintStart_toStartOf="@+id/guideline81"
        app:layout_constraintTop_toTopOf="@+id/guideline84" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline85"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.60" />

    <Button
        android:id="@+id/btnStockErrorUpdateURLUntracked"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="?android:attr/selectableItemBackground"
        android:text="@string/urlStockTakeUntracked"
        android:textColor="#000000"
        android:textColorLink="#000000"
        android:textSize="18dp"
        app:layout_constraintTop_toBottomOf="@+id/guideline85"></Button>

    <Button
        android:id="@+id/btnStockErrorUpdateURLMaster"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="?android:attr/selectableItemBackground"
        android:text="@string/urlStockTakeMaster"
        android:textColor="#000000"
        android:textColorLink="#000000"
        android:textSize="18dp"
        app:layout_constraintTop_toBottomOf="@+id/btnStockErrorUpdateURLUntracked"></Button>

    <Button
        android:id="@+id/btnResumeUpdateScanStock"
        android:layout_width="250dp"
        android:layout_height="60dp"
        android:background="#4A61C0"
        android:text="Scan"
        android:textSize="30dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnStockErrorUpdateURLMaster"></Button>

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline88"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.2" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline89"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.62" />

    <Switch
        android:id="@+id/switchErrorUpdateFailButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:checked="true"
        android:text="Camera (Zoom)"
        android:textSize="15dp"
        app:layout_constraintStart_toStartOf="@+id/guideline88"
        app:layout_constraintTop_toBottomOf="@+id/btnResumeUpdateScanStock"></Switch>

    <TextView
        android:id="@+id/lblCameraErrorZoomUpdateFailStatus"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:enabled="false"
        android:text="Enabled"
        android:textSize="15dp"
        android:textColor="#000000"
        app:layout_constraintStart_toStartOf="@+id/guideline89"
        app:layout_constraintTop_toBottomOf="@+id/btnResumeUpdateScanStock" />



</androidx.constraintlayout.widget.ConstraintLayout>