<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".StocktakePass">

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline34"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.3" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline43"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.1" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline44"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.85" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline45"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.38" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline46"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.43" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline48"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.72" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline47"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.15" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline49"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.64" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline50"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.66" />

    <ImageView
        android:id="@+id/imageView5"
        android:layout_width="194dp"
        android:layout_height="306dp"
        app:layout_constraintBottom_toBottomOf="@+id/guideline34"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/catstockfound" />

    <TextView
        android:id="@+id/textView27"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:enabled="false"
        android:maxWidth="310dp"
        android:text="@string/lableForStockTakePass"
        android:textColor="#000000"
        android:textSize="30dp"
        app:layout_constraintStart_toStartOf="@+id/guideline43"
        app:layout_constraintTop_toTopOf="@+id/guideline34" />

    <TextView
        android:id="@+id/textView28"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:enabled="false"
        android:text="Asset ID: "
        android:textColor="#000000"
        android:textSize="20dp"
        app:layout_constraintBottom_toTopOf="@+id/textView31"
        app:layout_constraintStart_toStartOf="@+id/guideline43"
        app:layout_constraintTop_toBottomOf="@+id/guideline45" />

    <TextView
        android:id="@+id/txtPassStockTake"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:enabled="false"
        android:maxWidth="300dp"
        android:maxLines="4"
        android:text="Stock Take Input"
        android:textColor="#000000"
        android:textSize="20dp"
        app:layout_constraintBottom_toTopOf="@+id/txtPassDescStockTake"
        app:layout_constraintStart_toStartOf="@+id/guideline46"
        app:layout_constraintTop_toBottomOf="@+id/guideline45" />

    <TextView
        android:id="@+id/textView31"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:enabled="false"
        android:text="Description: "
        android:textColor="#000000"
        android:textSize="20dp"
        app:layout_constraintStart_toStartOf="@+id/guideline43"
        app:layout_constraintTop_toBottomOf="@+id/textView28" />

    <TextView
        android:id="@+id/txtPassDescStockTake"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:enabled="false"
        android:maxLines="4"
        android:text="Description Input"
        android:textColor="#000000"
        android:textSize="20dp"
        app:layout_constraintStart_toStartOf="@+id/guideline46"
        app:layout_constraintTop_toBottomOf="@+id/txtPassStockTake" />

    <Button
        android:id="@+id/btnPassURLMaster"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:background="?android:attr/selectableItemBackground"
        android:text="@string/urlStockTakeMaster"
        android:textColor="#000000"
        android:textColorLink="#000000"
        android:textSize="18dp"
        app:layout_constraintTop_toTopOf="@+id/guideline48"></Button>

    <Button
        android:id="@+id/btnResumePassScanStock"
        android:layout_width="190dp"
        android:layout_height="40dp"
        android:background="#4A61C0"
        android:text="Scan"
        android:textSize="15dp"
        app:layout_constraintBottom_toTopOf="@+id/guideline90"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.177"
        app:layout_constraintStart_toStartOf="parent"></Button>

    <Switch
        android:id="@+id/switchPassButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:checked="true"
        android:text="Camera (Zoom)"
        android:textSize="11dp"
        app:layout_constraintStart_toStartOf="@+id/guideline43"
        app:layout_constraintTop_toTopOf="@id/guideline50" />

    <TextView
        android:id="@+id/lblCameraPassZoomStatus"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:enabled="false"
        android:text="Enabled"
        android:textColor="#000000"
        app:layout_constraintStart_toStartOf="@+id/guideline46"
        app:layout_constraintTop_toTopOf="@id/guideline50" />

    <TextView
        android:id="@+id/textView37"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:enabled="false"
        android:text="Remarks:"
        android:textColor="#000000"
        android:textSize="20dp"
        app:layout_constraintStart_toStartOf="@+id/guideline43"
        app:layout_constraintTop_toBottomOf="@+id/textView31" />

    <EditText
        android:id="@+id/editPassRemark"
        android:layout_width="310dp"
        android:layout_height="30dp"
        android:background="@drawable/edit_text_background"
        android:hint=""
        android:maxLength="255"
        android:maxLines="4"
        app:layout_constraintStart_toStartOf="@+id/guideline43"
        app:layout_constraintTop_toBottomOf="@+id/guideline71" />

    <Button
        android:id="@+id/btnPassUpdate"
        android:layout_width="wrap_content"
        android:layout_height="40dp"
        android:background="#4A61C0"
        android:text="Update"
        android:textSize="15dp"
        app:layout_constraintBottom_toTopOf="@+id/guideline90"
        app:layout_constraintEnd_toStartOf="@+id/guideline44" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline71"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.50" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline90"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.66" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline86"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.55" />

    <TextView
        android:id="@+id/textView44"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:enabled="false"
        android:text="@string/Remark_error_space"
        android:textColor="@color/red"
        android:textSize="20dp"
        app:layout_constraintStart_toStartOf="@+id/guideline43"
        app:layout_constraintTop_toTopOf="@+id/guideline86" />"

</androidx.constraintlayout.widget.ConstraintLayout>